--- a/src/Hangman.css
+++ b/src/Hangman.css
@@ -9,6 +9,7 @@
   border: 10px solid white;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.27),
     0 0 40px rgba(0, 0, 0, 0.06) inset;
+  height: 200px;
 }
 
 .Hangman h1 {
